test/FixIt/fixit-unicode-with-utf8-output.c
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_comment
comment|// This test is an additional set of checks for the fixit-unicode.c test for
end_comment

begin_comment
comment|// systems capable of outputting Unicode characters to the standard output in
end_comment

begin_comment
comment|// the UTF-8 encoding.
end_comment

begin_comment
comment|// RUN: not %clang_cc1 -fsyntax-only %S/fixit-unicode.c 2>&1 | FileCheck -strict-whitespace %s
end_comment

begin_comment
comment|// REQUIRES: utf8-capable-terminal
end_comment

begin_comment
comment|// CHECK: warning: format specifies type 'int' but the argument has type 'long'
end_comment

begin_comment
comment|// CHECK: {{^  printf\("∆: %d", 1L\);}}
end_comment

begin_comment
comment|// CHECK: {{^             ~~   \^~}}
end_comment

begin_comment
comment|// CHECK: error: use of undeclared identifier 'กsss'; did you mean 'กssss'?
end_comment

begin_comment
comment|// CHECK: {{^          \^}}
end_comment

begin_comment
comment|// CHECK: {{^          กssss}}
end_comment

begin_comment
comment|// CHECK: error: use of undeclared identifier 'ssกs'; did you mean 'ssกss'?
end_comment

begin_comment
comment|// CHECK: {{^          \^}}
end_comment

begin_comment
comment|// CHECK: {{^          ssกss}}
end_comment

begin_comment
comment|// CHECK: error: use of undeclared identifier 'ss一二三'; did you mean 's一二三'?
end_comment

begin_comment
comment|// CHECK: {{^                        \^~~~~~~~}}
end_comment

begin_comment
comment|// CHECK: {{^                        s一二三}}
end_comment

begin_comment
comment|// CHECK: error: use of undeclared identifier 'sssssssss'; did you mean 'sssssssssก'?
end_comment

begin_comment
comment|// CHECK: {{^          \^}}
end_comment

begin_comment
comment|// CHECK: {{^          sssssssssก}}
end_comment

end_unit

